--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					</center>
   				</div>
   				<center>
-  					<div id="img"></div>
+  					<div id="img-1"></div>
   				</center>
   				<div id="kanji">
   					<h1>Kanji</h1>
@@ -74,7 +74,7 @@
   					</center>
   				</div>
   				<center>
-  					<div id="img"></div>
+  					<div id="img-2"></div>
   				</center>
   				<div id="vocabulary">
   					<h1>Vocabulary</h1>
@@ -95,7 +95,7 @@
   					</center>
   				</div>
           <center>
-            <div id="img"></div>
+            <div id="img-3"></div>
           </center>
           <div id="lnp">
             <h1>Listening & Production</h1>
