--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
             </div>
   		<div id="words">
             <center>
-                <h1 id="word-h1">100 most common Japanese words</h1>
+                <h1 style="font-size: 80px;">100 most common Japanese words</h1>
                 <h2 id="word-h2">/日本語の頻出100単語</h2>
              </center>
             <div id="jap">
-                <h1>
+                <h1 style=" font-size: 14px;">
                     __の<br>               
 ＿に     <br>           
 ＿だ     <br>          
@@ -303,10 +303,206 @@ __まま           <br>
                 </h1> 
             </div>
             <div id="pos">
+<h1 style=" font-size: 14px;">
+ [particle]  <br>                             
+               [particle]        <br>                           
+               [verb]    <br>                             
+               [particle]    <br>                          
+               [verb]         <br>                         
+                [adjective]    <br>                      
+               [verb]            <br>                      
+               [particle]      <br>                         
+               [verb]                      <br>      
+                [particle]                        <br>    
+               [noun]                           <br>    
+                [verb]                            <br>    
+              [adjective]                       <br>    
+                [verb, in polite form]               <br>    
+                [noun]                                <br>    
+                [adverb]                        <br>    
+        [noun]                              <br>    
+       [verb]                                <br>    
+        [noun]                                <br>    
+               [adjective]                     <br>    
+        [verb]                               <br>    
+        [verb]                              <br>    
+      [number]                       <br>    
+    [verb]                               <br>    
+        [noun]                               <br>    
+        [number]                       <br>    
+              [particle]                            <br>       
+        [suffix]                               <br>    
+        [noun]                                <br>    
+               [particle]                           <br>    
+       [noun]                           <br>    
+        [noun]                               <br>    
+              [noun]                          <br>    
+       [noun]                              <br>    
+ [verb]                                <br>    
+        [adjective]                      <br>    
+        [noun]                             <br>    
+        [noun]                              <br>    
+       [noun]                               <br>    
+        [noun]                               <br>    
+              [verb]                              <br>    
+               [adjective]                   <br>    
+       [noun/adverb]                        <br>    
+               [conjunction]                       <br>    
+        [noun]                              <br>    
+               [adjective]                   <br>    
+       [noun]                              <br>    
+       [verb]                               <br>    
+       [verb]                                <br>    
+        [number]                       <br>    
+              [adverb]                             <br>    
+        [verb]                                <br>    
+        [number]                       <br>    
+              [verb]                               <br>    
+       [adjective]                     <br>    
+            [verb]                               <br>   
+        [verb]                                <br>    
+                [noun]                                <br>    
+       [noun]                               <br>    
+  [noun]                              <br>    
+              [noun]                             <br>       
+               [conjunction]                        <br>    
+        [adverb]                               <br>    
+        [noun]                               <br>    
+       [noun]                               <br>    
+       [noun]                            <br>    
+        [noun]                                <br>    
+                [conjuction]                      <br>    
+               [noun]                                <br>    
+               [adverb]                               <br>    
+       [noun]                                <br>    
+       [verb]                                <br>    
+               [adverb]                        <br>    
+       [noun]                             <br>    
+  [verb]                                <br>    
+               [adverb]                          <br>      
+        [noun]                              <br>    
+        [noun]                                <br>    
+[verb]                       <br>    
+       [verb]                           <br>         
+               [noun]                             <br>     
+       [verb]                               <br>    
+        [verb]                                <br>    
+       [noun]                              <br>    
+       [noun]                               <br>    
+               [noun]                              <br>    
+               [conjunction]                     <br>    
+               [particle]                              <br>    
+                [noun]                               <br>    
+        [noun]                               <br>    
+        [noun]                               <br>    
+        [noun]                               <br>    
+                [adverb]                                <br>    
+                [particle]                                <br>    
+                [verb]                              <br>    
+        [noun]                                <br>    
+                [noun]<br>    
+</h1>
 
-
-            </div id="meaning">
-
+            <div id="meaning">
+              <h1  style=" font-size: 14px;">
+                        __'s                 of _______<br>
+                        to _[place]_<br>
+                        is _____<br>
+                        and ___                 with ____<br>
+                        do ____<br>
+                        not there                 “don't have”<br>
+                        to be there         “have”<br>
+                        __ too                __ also<br>
+                         to be there         “have”<br>
+                         from _____                because ______<br>
+                         thing (intangible/abstract)                fact<br>
+                         to become<br>
+                         that ____<br>
+                         is ____<br>
+                         that<br>
+                         that way                like that<br>
+                         person<br>
+                         to say/tell<br>
+                         thing (tangible/physical)<br>
+                         this ___<br>
+                         to come<br>
+                         to think<br>
+                         one<br>
+                         to look/see/watch<br>
+                         what<br>
+                         two<br>
+                         until _____<br>
+                         __s         {pluralizes a noun}<br>
+                         myself                him/her/your/oneself<br>
+                         only _____<br>
+                         I        me<br>
+                         the inside (of something)<br>
+                         this<br>
+                         face<br>
+                         to be able to do <br>
+                         good<br>
+                         he        him<br>
+                         hand<br>
+                         voice<br>
+                         eye<br>
+                         to do<br>
+                         how<br>
+                         the front of                before                        ago<br>
+                         But,                However<br>
+                          man                a male<br>
+                          that ___ <br>
+                          person <br>
+                          to go out         to leave/exit            to appear<br>
+                          to find out        to know<br>
+                          ten<br>
+                           already<br>
+                           to go<br>
+                           three<br>
+                           to be discernible  “to understand”<br>
+                            that kind of ____<br>
+                             to give (to the speaker)<br>
+                            to cut  <br>
+                           place/spot  <br>
+                            time/hour (as in a point in time)<br>
+                            she/her<br>
+                           here<br>
+                           And<br>
+                           now<br>
+                            the top of        the place over         “above/on top”<br>
+                             woman                        a female<br>
+                             energy  (one's) wits  spirit  mind<br>
+                             to be attached                to stick onto          to be with<br>
+                            However,<br>
+                            one's good        one's sake<br>
+                            again<br>
+                             I        me<br>
+                             to listen        to ask<br>
+                             as much as ___<br>
+                             I         me<br>
+                             to be visible                “can see”<br>
+                              more than ____ --er than ______
+                              house<br>
+                              day<br>
+                               to think about                to consider<br>
+                              to put out/bring out<br>
+                              there<br>
+                              to enter        to go in<br>
+                               to carry        to have on one's person<br>
+                                mouth<br>
+                                 a talk  a story<br>
+                                 case   circumstances   reason<br>
+                                but<br>
+                                etc.                and such<br>
+                                you<br>
+                                sound<br>
+                                head<br>
+                                word<br>
+                                still                yet<br>
+                                 with it still ______                while it still ______<br>
+                                  to put on/cause to take up (space); to use (time, $) toward<br>
+                                   interval        space in between<br>
+                                   where<br>
+              </h1> 
            </div>
   		<div id="emojis"></div>
   	</div>
