--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   				<a href="#language">Language</a>
   				<a href="#words">Most common Japanese words</a>
   				<a href="#emojis">Emojis</a>
+                      <a href="https://github.com/Petkovix/Japanese-Thread">Fork me</a>
   			</ul>
   		</div>
   		<center>
@@ -92,9 +93,6 @@
   						</h2>
   					</center>
   				</div>
-  				<center>
-  					<div id="img-2"></div>
-  				</center>
   				<div id="vocabulary">
   					<h1>Vocabulary</h1>
   					<center>
@@ -196,6 +194,9 @@
                     </center>
                   </div>
             </div>
+            <center>
+                <div id="img-2" style="margin-top:200px;"></div>
+           </center>
   		<div id="words">
             <center>
                 <h1 style="font-size: 80px;">100 most common Japanese words</h1>
@@ -404,7 +405,7 @@ __まま           <br>
 </h1>
 
             <div id="meaning">
-              <h1  style=" font-size: 14px;">
+              <h1  style=" font-size: 14.5px;">
                         __'s                 of _______<br>
                         to _[place]_<br>
                         is _____<br>
@@ -504,7 +505,14 @@ __まま           <br>
                                    where<br>
               </h1> 
            </div>
-  		<div id="emojis"></div>
+  		<div id="emojis">
+            <center>
+                <h1>
+                  Emoji
+                </h1>
+                <h2 id="emojis-h2">Coming soon</h2>
+            </center>
+           </div>
   	</div>
 
   </body>
