--- a/index.html
+++ b/index.html
@@ -202,309 +202,116 @@
                 <h1 style="font-size: 80px;">100 most common Japanese words</h1>
                 <h2 id="word-h2">/日本語の頻出100単語</h2>
              </center>
-            <div id="jap">
-                <h1 style=" font-size: 14px;">
-                    __の<br>               
-＿に     <br>           
-＿だ     <br>          
-＿と     <br>          
-＿する   <br>            
-ない     <br>          
-いる     <br>           
-＿も     <br>           
-ある     <br>           
-__から   <br>             
-こと     <br>          
-なる     <br>           
-その＿   <br>             
-__です   <br>             
-それ     <br>         
-そう     <br>          
-人 （ひと） <br>       
-言う (いう<br>)       
-物（もの） <br>      
-この__   <br>           
-来る（くる）<br>      
-思う（おもう）<br>       
-一（いち）       <br> 
-見る（みる）     <br>  
-何（なに）      <br>  
-二（に）        <br>
-__まで        <br>    
-__達（たち）     <br>   
-自分（じぶん）   <br>     
-___だけ       <br>        
-私（わたし）       <br>
-中（なか）        <br>
-これ                <br>
-顔（かお）       <br>
-出来る（できる） <br>                             
-良い（いい）        <br> 
-彼（かれ）        <br> 
-手（て）        <br> 
-声（こえ）        <br> 
-目（め）        <br> 
-やる               <br>  
-どう               <br>                                           
-前（まえ）        <br> 
-でも                <br> 
-男（おとこ）        <br> 
-あの___             <br>    
-者（もの）        <br> 
-出る（でる）        <br> 
-知る（しる）        <br> 
-十（じゅう）        <br> 
-もう               <br> 
-行く（いく）       <br> 
-三（さん）        <br> 
-わかる               <br>  
-そんな__       <br> 
-くれる             <br> 
-切る（きる）       <br> 
-ところ               <br> 
-時（とき）        <br> 
-彼女（かのじょ）<br> 
-ここ              <br> 
-そして               <br> 
-今（いま）       <br> 
-上（うえ）        <br> 
-女（おんな）        <br> 
-気（き）        <br> 
-付く（つく）        <br> 
-しかし                <br> 
-ため               <br> 
-また              <br> 
-俺（おれ）       <br> 
-聞く（きく）       <br> 
-__ほど                <br> 
-僕（ぼく）       <br> 
-見える（みえる） <br>                            
-＿より       <br>         
-家（いえ）     <br>   
-日（ひ）       <br> 
-考える（かんがえる）  <br> 
-出す（だす）        <br> 
-そこ             <br>    
-入る（はいる）       <br>  
-持つ（もつ）        <br> 
-口（くち）       <br> 
-話（はなし）        <br> 
-わけ             <br>    
-けど             <br>    
-など             <br>    
-あなた           <br>     
-音（おと）       <br> 
-頭（あたま）      <br> 
-言葉（ことば）       <br> 
-まだ             <br>    
-__まま           <br>     
-かける           <br>     
-間（あいだ）    <br> 
-どこ             <br>   
-                </h1> 
-            </div>
-            <div id="pos">
-<h1 style=" font-size: 14px;">
- [particle]  <br>                             
-               [particle]        <br>                           
-               [verb]    <br>                             
-               [particle]    <br>                          
-               [verb]         <br>                         
-                [adjective]    <br>                      
-               [verb]            <br>                      
-               [particle]      <br>                         
-               [verb]                      <br>      
-                [particle]                        <br>    
-               [noun]                           <br>    
-                [verb]                            <br>    
-              [adjective]                       <br>    
-                [verb, in polite form]               <br>    
-                [noun]                                <br>    
-                [adverb]                        <br>    
-        [noun]                              <br>    
-       [verb]                                <br>    
-        [noun]                                <br>    
-               [adjective]                     <br>    
-        [verb]                               <br>    
-        [verb]                              <br>    
-      [number]                       <br>    
-    [verb]                               <br>    
-        [noun]                               <br>    
-        [number]                       <br>    
-              [particle]                            <br>       
-        [suffix]                               <br>    
-        [noun]                                <br>    
-               [particle]                           <br>    
-       [noun]                           <br>    
-        [noun]                               <br>    
-              [noun]                          <br>    
-       [noun]                              <br>    
- [verb]                                <br>    
-        [adjective]                      <br>    
-        [noun]                             <br>    
-        [noun]                              <br>    
-       [noun]                               <br>    
-        [noun]                               <br>    
-              [verb]                              <br>    
-               [adjective]                   <br>    
-       [noun/adverb]                        <br>    
-               [conjunction]                       <br>    
-        [noun]                              <br>    
-               [adjective]                   <br>    
-       [noun]                              <br>    
-       [verb]                               <br>    
-       [verb]                                <br>    
-        [number]                       <br>    
-              [adverb]                             <br>    
-        [verb]                                <br>    
-        [number]                       <br>    
-              [verb]                               <br>    
-       [adjective]                     <br>    
-            [verb]                               <br>   
-        [verb]                                <br>    
-                [noun]                                <br>    
-       [noun]                               <br>    
-  [noun]                              <br>    
-              [noun]                             <br>       
-               [conjunction]                        <br>    
-        [adverb]                               <br>    
-        [noun]                               <br>    
-       [noun]                               <br>    
-       [noun]                            <br>    
-        [noun]                                <br>    
-                [conjuction]                      <br>    
-               [noun]                                <br>    
-               [adverb]                               <br>    
-       [noun]                                <br>    
-       [verb]                                <br>    
-               [adverb]                        <br>    
-       [noun]                             <br>    
-  [verb]                                <br>    
-               [adverb]                          <br>      
-        [noun]                              <br>    
-        [noun]                                <br>    
-[verb]                       <br>    
-       [verb]                           <br>         
-               [noun]                             <br>     
-       [verb]                               <br>    
-        [verb]                                <br>    
-       [noun]                              <br>    
-       [noun]                               <br>    
-               [noun]                              <br>    
-               [conjunction]                     <br>    
-               [particle]                              <br>    
-                [noun]                               <br>    
-        [noun]                               <br>    
-        [noun]                               <br>    
-        [noun]                               <br>    
-                [adverb]                                <br>    
-                [particle]                                <br>    
-                [verb]                              <br>    
-        [noun]                                <br>    
-                [noun]<br>    
-</h1>
-
-            <div id="meaning">
-              <h1  style=" font-size: 14.5px;">
-                        __'s                 of _______<br>
-                        to _[place]_<br>
-                        is _____<br>
-                        and ___                 with ____<br>
-                        do ____<br>
-                        not there                 “don't have”<br>
-                        to be there         “have”<br>
-                        __ too                __ also<br>
-                         to be there         “have”<br>
-                         from _____                because ______<br>
-                         thing (intangible/abstract)                fact<br>
-                         to become<br>
-                         that ____<br>
-                         is ____<br>
-                         that<br>
-                         that way                like that<br>
-                         person<br>
-                         to say/tell<br>
-                         thing (tangible/physical)<br>
-                         this ___<br>
-                         to come<br>
-                         to think<br>
-                         one<br>
-                         to look/see/watch<br>
-                         what<br>
-                         two<br>
-                         until _____<br>
-                         __s         {pluralizes a noun}<br>
-                         myself                him/her/your/oneself<br>
-                         only _____<br>
-                         I        me<br>
-                         the inside (of something)<br>
-                         this<br>
-                         face<br>
-                         to be able to do <br>
-                         good<br>
-                         he        him<br>
-                         hand<br>
-                         voice<br>
-                         eye<br>
-                         to do<br>
-                         how<br>
-                         the front of                before                        ago<br>
-                         But,                However<br>
-                          man                a male<br>
-                          that ___ <br>
-                          person <br>
-                          to go out         to leave/exit            to appear<br>
-                          to find out        to know<br>
-                          ten<br>
-                           already<br>
-                           to go<br>
-                           three<br>
-                           to be discernible  “to understand”<br>
-                            that kind of ____<br>
-                             to give (to the speaker)<br>
-                            to cut  <br>
-                           place/spot  <br>
-                            time/hour (as in a point in time)<br>
-                            she/her<br>
-                           here<br>
-                           And<br>
-                           now<br>
-                            the top of        the place over         “above/on top”<br>
-                             woman                        a female<br>
-                             energy  (one's) wits  spirit  mind<br>
-                             to be attached                to stick onto          to be with<br>
-                            However,<br>
-                            one's good        one's sake<br>
-                            again<br>
-                             I        me<br>
-                             to listen        to ask<br>
-                             as much as ___<br>
-                             I         me<br>
-                             to be visible                “can see”<br>
-                              more than ____ --er than ______
-                              house<br>
-                              day<br>
-                               to think about                to consider<br>
-                              to put out/bring out<br>
-                              there<br>
-                              to enter        to go in<br>
-                               to carry        to have on one's person<br>
-                                mouth<br>
-                                 a talk  a story<br>
-                                 case   circumstances   reason<br>
-                                but<br>
-                                etc.                and such<br>
-                                you<br>
-                                sound<br>
-                                head<br>
-                                word<br>
-                                still                yet<br>
-                                 with it still ______                while it still ______<br>
-                                  to put on/cause to take up (space); to use (time, $) toward<br>
-                                   interval        space in between<br>
-                                   where<br>
-              </h1> 
-           </div>
+             <center>
+             <h1 id="list" style="font-size:24px;">
+                の---------------------------------------indicates possessive<br>
+た---------------------------------------indicates past completed or action; indicates light imperative<br>
+に---------------------------------------indicates location of person or thing<br>
+を---------------------------------------indicates direct object of action<br>
+て---------------------------------------casual quoting particle<br>
+だ---------------------------------------be; is; indicates past or completed action<br>
+が---------------------------------------indicates sentence subject<br>
+と---------------------------------------if; when; and; if; used for quoting<br>
+する---------------------------------------to do<br>
+ない---------------------------------------not;
+earthquake<br>
+いる---------------------------------------to be; to go<br>
+も---------------------------------------also; too<br>
+で---------------------------------------indicates location of action<br>
+か---------------------------------------indicates question (at sentence end)<br>
+ある---------------------------------------to be; to exist<br>
+から---------------------------------------from<br>
+こと---------------------------------------thing<br>
+ん---------------------------------------yes; uh huh<br>
+なる---------------------------------------to become<br>
+う---------------------------------------rabbit<br>
+れる---------------------------------------indicates passive voice<br>
+よう---------------------------------------v. to get drunk
+n. task; business<br>
+その---------------------------------------that (something distant from the speaker)<br>
+ます---------------------------------------to increase; to grow<br>
+です---------------------------------------be; is<br>
+それ---------------------------------------that (item near listener)<br>
+よ---------------------------------------evening, night<br>
+そう---------------------------------------so, really<br>
+人---------------------------------------(ひと）person
+(じん）denotes nationality<br>
+いう---------------------------------------to say, to call<br>
+ぱ---------------------------------------apiece, each<br>
+お---------------------------------------honorable<br>
+言う---------------------------------------to say, to name<br>
+もの---------------------------------------person<br>
+thing, object<br>
+この---------------------------------------this (something close to speaker)<br>
+くる---------------------------------------to come<br>
+へ---------------------------------------indicates direction or goal<br>
+ぬ---------------------------------------plain, field<br>
+思う---------------------------------------to think<br>
+一---------------------------------------one<br>
+見る---------------------------------------to see<br>
+何---------------------------------------what<br>
+な---------------------------------------indicates emotion or emphasis<br>
+や---------------------------------------such things as (before a list)<br>
+られる---------------------------------------indicates passive voice<br>
+二---------------------------------------two<br>
+ね---------------------------------------indicates emphasis and/or agreement<br>
+さ---------------------------------------–ness (indicating degree or condition)<br>
+まで---------------------------------------until<br>
+たち---------------------------------------plural suffix for people/animals<br>
+せる---------------------------------------to approach<br>
+く---------------------------------------section<br>
+nine<br>
+自分---------------------------------------myself, me<br>
+って---------------------------------------casual quoting particle<br>
+じゃ---------------------------------------then, well<br>
+だけ---------------------------------------only<br>
+てる---------------------------------------to shine<br>
+私---------------------------------------I, me<br>
+中---------------------------------------inside<br>
+さん---------------------------------------formal suffix after person's name<br>
+ながら---------------------------------------while, although<br>
+いく---------------------------------------some<br>
+わ---------------------------------------indicates emotion or admiration<br>
+という---------------------------------------said, called thus<br>
+来る---------------------------------------to come, to arrive<br>
+これ---------------------------------------this (item near speaker)<br>
+顔---------------------------------------face<br>
+できる---------------------------------------to be able to<br>
+いい---------------------------------------good, excellent<br>
+彼---------------------------------------that (something distant from both speaker and listener)<br>
+しまう---------------------------------------to finish<br>
+手---------------------------------------(て）hand, arm<br>
+ら---------------------------------------pluralizing suffix<br>
+声---------------------------------------(こえ）voice<br>
+たい---------------------------------------opposite<br>
+目---------------------------------------(め）eye, eyeball<br>
+やる---------------------------------------to send, to dispatch<br>
+どう---------------------------------------how<br>
+前---------------------------------------(さき）previous, prior<br>
+みる---------------------------------------to look after, to see<br>
+でも---------------------------------------but, however<br>
+男---------------------------------------(おとこ）man<br>
+あの---------------------------------------that (something distant from both speaker and listener)<br>
+者---------------------------------------(まの) person<br>
+出る---------------------------------------(でる) to leave, to exit<br>
+知る---------------------------------------(しる) to know<br>
+十---------------------------------------ten<br>
+もう---------------------------------------already<br>
+行く---------------------------------------to go<br>
+三---------------------------------------three<br>
+わかる---------------------------------------to understand<br>
+そんな---------------------------------------like that<br>
+くれる---------------------------------------to give<br>
+きる---------------------------------------to kill<br>
+ところ---------------------------------------place, spot<br>
+時---------------------------------------とき<br>
+彼女---------------------------------------woman<br>
+ここ---------------------------------------here<br>
+わたし---------------------------------------I, me<br>
+そして---------------------------------------and then, as such, thus<br>
+             </h1>
+             </center>
+      </div>
   		<div id="emojis">
             <center>
                 <h1>
