--- a/index.html
+++ b/index.html
@@ -204,111 +204,210 @@
              </center>
              <center>
              <h1 id="list" style="font-size:24px;">
-                の---------------------------------------indicates possessive<br>
-た---------------------------------------indicates past completed or action; indicates light imperative<br>
-に---------------------------------------indicates location of person or thing<br>
-を---------------------------------------indicates direct object of action<br>
-て---------------------------------------casual quoting particle<br>
-だ---------------------------------------be; is; indicates past or completed action<br>
-が---------------------------------------indicates sentence subject<br>
-と---------------------------------------if; when; and; if; used for quoting<br>
-する---------------------------------------to do<br>
-ない---------------------------------------not;
+              の---indicates possessive<br>
+
+た---indicates past completed or action; indicates light imperative<br>
+
+に---indicates location of person or thing<br>
+
+を---indicates direct object of action<br>
+
+て---casual quoting particle<br>
+
+だ---be; is; indicates past or completed action<br>
+
+が---indicates sentence subject<br>
+
+と---if; when; and; if; used for quoting<br>
+
+する---to do<br>
+
+ない---not;
 earthquake<br>
-いる---------------------------------------to be; to go<br>
-も---------------------------------------also; too<br>
-で---------------------------------------indicates location of action<br>
-か---------------------------------------indicates question (at sentence end)<br>
-ある---------------------------------------to be; to exist<br>
-から---------------------------------------from<br>
-こと---------------------------------------thing<br>
-ん---------------------------------------yes; uh huh<br>
-なる---------------------------------------to become<br>
-う---------------------------------------rabbit<br>
-れる---------------------------------------indicates passive voice<br>
-よう---------------------------------------v. to get drunk
-n. task; business<br>
-その---------------------------------------that (something distant from the speaker)<br>
-ます---------------------------------------to increase; to grow<br>
-です---------------------------------------be; is<br>
-それ---------------------------------------that (item near listener)<br>
-よ---------------------------------------evening, night<br>
-そう---------------------------------------so, really<br>
-人---------------------------------------(ひと）person
+
+いる---to be; to go<br>
+
+も---also; too<br>
+
+で---indicates location of action<br>
+
+か---indicates question (at sentence end)<br>
+
+ある---to be; to exist<br>
+
+から---from<br>
+
+こと---thing<br>
+
+ん---yes; uh huh<br>
+
+なる---to become<br>
+
+う---rabbit
+<br>
+れる---indicates passive voice
+
+よう---v. to get drunk
+n. task; business
+<br>
+その---that (something distant from the speaker)<br>
+
+ます---to increase; to grow<br>
+
+です---be; is<br>
+
+それ---that (item near listener)<br>
+
+よ---evening, night<br>
+
+そう---so, really<br>
+
+人---(ひと）person
 (じん）denotes nationality<br>
-いう---------------------------------------to say, to call<br>
-ぱ---------------------------------------apiece, each<br>
-お---------------------------------------honorable<br>
-言う---------------------------------------to say, to name<br>
-もの---------------------------------------person<br>
+
+いう---to say, to call<br>
+
+ぱ---apiece, each<br>
+
+お---honorable<br>
+
+言う---to say, to name<br>
+
+もの---person
 thing, object<br>
-この---------------------------------------this (something close to speaker)<br>
-くる---------------------------------------to come<br>
-へ---------------------------------------indicates direction or goal<br>
-ぬ---------------------------------------plain, field<br>
-思う---------------------------------------to think<br>
-一---------------------------------------one<br>
-見る---------------------------------------to see<br>
-何---------------------------------------what<br>
-な---------------------------------------indicates emotion or emphasis<br>
-や---------------------------------------such things as (before a list)<br>
-られる---------------------------------------indicates passive voice<br>
-二---------------------------------------two<br>
-ね---------------------------------------indicates emphasis and/or agreement<br>
-さ---------------------------------------–ness (indicating degree or condition)<br>
-まで---------------------------------------until<br>
-たち---------------------------------------plural suffix for people/animals<br>
-せる---------------------------------------to approach<br>
-く---------------------------------------section<br>
-nine<br>
-自分---------------------------------------myself, me<br>
-って---------------------------------------casual quoting particle<br>
-じゃ---------------------------------------then, well<br>
-だけ---------------------------------------only<br>
-てる---------------------------------------to shine<br>
-私---------------------------------------I, me<br>
-中---------------------------------------inside<br>
-さん---------------------------------------formal suffix after person's name<br>
-ながら---------------------------------------while, although<br>
-いく---------------------------------------some<br>
-わ---------------------------------------indicates emotion or admiration<br>
-という---------------------------------------said, called thus<br>
-来る---------------------------------------to come, to arrive<br>
-これ---------------------------------------this (item near speaker)<br>
-顔---------------------------------------face<br>
-できる---------------------------------------to be able to<br>
-いい---------------------------------------good, excellent<br>
-彼---------------------------------------that (something distant from both speaker and listener)<br>
-しまう---------------------------------------to finish<br>
-手---------------------------------------(て）hand, arm<br>
-ら---------------------------------------pluralizing suffix<br>
-声---------------------------------------(こえ）voice<br>
-たい---------------------------------------opposite<br>
-目---------------------------------------(め）eye, eyeball<br>
-やる---------------------------------------to send, to dispatch<br>
-どう---------------------------------------how<br>
-前---------------------------------------(さき）previous, prior<br>
-みる---------------------------------------to look after, to see<br>
-でも---------------------------------------but, however<br>
-男---------------------------------------(おとこ）man<br>
-あの---------------------------------------that (something distant from both speaker and listener)<br>
-者---------------------------------------(まの) person<br>
-出る---------------------------------------(でる) to leave, to exit<br>
-知る---------------------------------------(しる) to know<br>
-十---------------------------------------ten<br>
-もう---------------------------------------already<br>
-行く---------------------------------------to go<br>
-三---------------------------------------three<br>
-わかる---------------------------------------to understand<br>
-そんな---------------------------------------like that<br>
-くれる---------------------------------------to give<br>
-きる---------------------------------------to kill<br>
-ところ---------------------------------------place, spot<br>
-時---------------------------------------とき<br>
-彼女---------------------------------------woman<br>
-ここ---------------------------------------here<br>
-わたし---------------------------------------I, me<br>
-そして---------------------------------------and then, as such, thus<br>
+
+この---this (something close to speaker)<br>
+
+くる---to come<br>
+
+へ---indicates direction or goal<br>
+
+ぬ---plain, field<br>
+
+思う---to think<br>
+
+一---one<br>
+
+見る---to see<br>
+
+何---what<br>
+
+な---indicates emotion or emphasis<br>
+
+や---such things as (before a list)<br>
+
+られる---indicates passive voice<br>
+
+二---two<br>
+
+ね---indicates emphasis and/or agreement<br>
+
+さ---–ness (indicating degree or condition)<br>
+
+まで---until<br>
+
+たち---plural suffix for people/animals<br>
+
+せる---to approach<br>
+
+く---section<br>
+nine
+
+自分---myself, me<br>
+
+って---casual quoting particle<br>
+
+じゃ---then, well<br>
+
+だけ---only<br>
+
+てる---to shine<br>
+
+私---I, me<br>
+
+中---inside<br>
+
+さん---formal suffix after person's name<br>
+
+ながら---while, although<br>
+
+いく---some<br>
+
+わ---indicates emotion or admiration<br>
+
+という---said, called thus<br>
+
+来る---to come, to arrive<br>
+
+これ---this (item near speaker)<br>
+
+顔---face<br>
+
+できる---to be able to<br>
+
+いい---good, excellent<br>
+
+彼---that (something distant from both speaker and listener)<br>
+
+しまう---to finish<br>
+
+手---(て）hand, arm<br>
+
+ら---pluralizing suffix<br>
+
+声---(こえ）voice<br>
+
+たい---opposite<br>
+
+目---(め）eye, eyeball<br>
+
+やる---to send, to dispatch<br>
+
+どう---how<br>
+
+前---(さき）previous, prior<br>
+
+みる---to look after, to see<br>
+
+でも---but, however<br>
+
+男---(おとこ）man<br>
+
+あの---that (something distant from both speaker and listener)<br>
+
+者---(まの) person<br>
+
+出る---(でる) to leave, to exit<br>
+
+知る---(しる) to know<br>
+
+十---ten<br>
+
+もう---already<br>
+
+行く---to go<br>
+
+三---three<br>
+
+わかる---to understand<br>
+
+そんな---like that<br>
+
+くれる---to give<br>
+
+きる---to kill<br>
+
+ところ---place, spot<br>
+
+時---とき<br>
+
+彼女---woman<br>
+
+ここ---here<br>
+
+わたし---I, me<br>
+
+そして---and then, as such, thus<br>
              </h1>
              </center>
       </div>
@@ -317,10 +416,270 @@ nine<br>
                 <h1>
                   Emoji
                 </h1>
-                <h2 id="emojis-h2">Coming soon</h2>
-            </center>
-           </div>
-  	</div>
+                <h2 id="emojis-h2">Cute</h2>
+                <h3  style="margin-top: 100px;color: #323455;">｜ω・）
+｜ω＋）&nbsp;&nbsp;&nbsp;&nbsp;
+(íoì)&nbsp;&nbsp;&nbsp;&nbsp;
+(´౪`)&nbsp;&nbsp;&nbsp;&nbsp;
+(＾౪)/&nbsp;&nbsp;&nbsp;&nbsp;
+(^q^)&nbsp;&nbsp;&nbsp;&nbsp;
+(・∀・)&nbsp;&nbsp;&nbsp;&nbsp;
+(・ω・)&nbsp;&nbsp;&nbsp;&nbsp;
+༼ꉺɷꉺ༽&nbsp;&nbsp;&nbsp;&nbsp;
+（>∀<）&nbsp;&nbsp;&nbsp;&nbsp;
+(`ζ´)&nbsp;&nbsp;&nbsp;&nbsp;
+٩◔̯◔۶&nbsp;&nbsp;&nbsp;&nbsp;
+U^ｴ^U&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ·ᴥ·ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ•ᴥ•ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ￫ᴥ￩ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+(つД・)&nbsp;&nbsp;&nbsp;&nbsp;
+[>=<]&nbsp;&nbsp;&nbsp;&nbsp;
+(`o´)&nbsp;&nbsp;&nbsp;&nbsp;
+(°ヮ°)&nbsp;&nbsp;&nbsp;&nbsp;
+༼☯﹏☯༽&nbsp;&nbsp;&nbsp;&nbsp;
+^ↀᴥↀ^&nbsp;&nbsp;&nbsp;&nbsp;
+▓⚗_⚗▓&nbsp;&nbsp;&nbsp;&nbsp;
+(◕ᴥ◕)&nbsp;&nbsp;&nbsp;&nbsp;
+(≧Д≦)&nbsp;&nbsp;&nbsp;&nbsp;
+(⊙ᗜ⊙)&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ⊙ᴥ⊙ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+(´﹃｀)&nbsp;&nbsp;&nbsp;&nbsp;
+(・ω<)&nbsp;&nbsp;&nbsp;&nbsp;
+（◞‸◟）&nbsp;&nbsp;&nbsp;&nbsp;
+(ò皿ó)&nbsp;&nbsp;&nbsp;&nbsp;
+(〒ó〒)&nbsp;&nbsp;&nbsp;&nbsp;
+(ΦωΦ)&nbsp;&nbsp;&nbsp;&nbsp;
+(òロó)&nbsp;&nbsp;&nbsp;&nbsp;
+(つД⊂)&nbsp;&nbsp;&nbsp;&nbsp;
+(T^T)&nbsp;&nbsp;&nbsp;&nbsp;
+( ´艸｀)&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ　·ᴥ·ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ·ᴥ·　ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+(・ε・｀)&nbsp;&nbsp;&nbsp;&nbsp;
+<丶｀∀´>&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ￫ᴥ￩　ʔ&nbsp;&nbsp;&nbsp;&nbsp;
+(´д｀、)&nbsp;&nbsp;&nbsp;&nbsp;
+(๑￫ܫ￩)&nbsp;&nbsp;&nbsp;&nbsp;
+(✿ヘᴥヘ)&nbsp;&nbsp;&nbsp;&nbsp;
+(‘ω‘ )&nbsp;&nbsp;&nbsp;&nbsp;
+(✿╹◡╹)&nbsp;&nbsp;&nbsp;&nbsp;
+(▰∀◕)ﾉ&nbsp;&nbsp;&nbsp;&nbsp;
+(;´ρ`)&nbsp;&nbsp;&nbsp;&nbsp;
+</h3>
+ <h2 id="emojis-h2">Happy</h2>
+<h3  style="margin-top: 100px;color: #323455;">｜ω・）
+ɷ◡ɷ&nbsp;&nbsp;&nbsp;&nbsp;
+✖‿✖&nbsp;&nbsp;&nbsp;&nbsp;
+⊙▽⊙&nbsp;&nbsp;&nbsp;&nbsp;
+ʘ‿ʘ&nbsp;&nbsp;&nbsp;&nbsp;
+മ◡മ&nbsp;&nbsp;&nbsp;&nbsp;
+◉‿◉&nbsp;&nbsp;&nbsp;&nbsp;
+≖‿≖&nbsp;&nbsp;&nbsp;&nbsp;
+◙‿◙&nbsp;&nbsp;&nbsp;&nbsp;
+ȏ.̮ȏ&nbsp;&nbsp;&nbsp;&nbsp;
+(≧▽≦)&nbsp;&nbsp;&nbsp;&nbsp;
+（ꉺᗜꉺ）&nbsp;&nbsp;&nbsp;&nbsp;
+（＾ω＾）&nbsp;&nbsp;&nbsp;&nbsp;
+（＾ｖ＾）&nbsp;&nbsp;&nbsp;&nbsp;
+(￣个￣)&nbsp;&nbsp;&nbsp;&nbsp;
+〔´∇｀〕&nbsp;&nbsp;&nbsp;&nbsp;
+(∩_∩)&nbsp;&nbsp;&nbsp;&nbsp;
+(´∀`)&nbsp;&nbsp;&nbsp;&nbsp;
+⊂◉‿◉つ&nbsp;&nbsp;&nbsp;&nbsp;
+（⌒▽⌒ゞ&nbsp;&nbsp;&nbsp;&nbsp;
+ᴑ͝ᴗᴑ͝&nbsp;&nbsp;&nbsp;&nbsp;
+(＾ω＾)&nbsp;&nbsp;&nbsp;&nbsp;
+(ﾟ⊿ﾟ)&nbsp;&nbsp;&nbsp;&nbsp;
+米＾－＾米&nbsp;&nbsp;&nbsp;&nbsp;
+ヽ(ヅ)ノ&nbsp;&nbsp;&nbsp;&nbsp;
+(’ω’)&nbsp;&nbsp;&nbsp;&nbsp;
+（ꉺ౪ꉺ）&nbsp;&nbsp;&nbsp;&nbsp;
+(◜௰◝)&nbsp;&nbsp;&nbsp;&nbsp;
+(-‿◦)&nbsp;&nbsp;&nbsp;&nbsp;
+(•‿•)&nbsp;&nbsp;&nbsp;&nbsp;
+(─‿─)&nbsp;&nbsp;&nbsp;&nbsp;
+(◑‿◐)&nbsp;&nbsp;&nbsp;&nbsp;
+ღවꇳවღ&nbsp;&nbsp;&nbsp;&nbsp;
+(・◇・)&nbsp;&nbsp;&nbsp;&nbsp;
+｡^‿^｡&nbsp;&nbsp;&nbsp;&nbsp;
+´･ᴗ･`&nbsp;&nbsp;&nbsp;&nbsp;
+(ᗒᗨᗕ)&nbsp;&nbsp;&nbsp;&nbsp;
+▽・ω・▽&nbsp;&nbsp;&nbsp;&nbsp;
+(＾▽＾)&nbsp;&nbsp;&nbsp;&nbsp;
+(∩ڡ∩)&nbsp;&nbsp;&nbsp;&nbsp;
+(☆▽☆)&nbsp;&nbsp;&nbsp;&nbsp;
+｡◕‿◕｡&nbsp;&nbsp;&nbsp;&nbsp;
+(^∇^)&nbsp;&nbsp;&nbsp;&nbsp;
+ɾ⚈▿⚈ɹ&nbsp;&nbsp;&nbsp;&nbsp;
+∩˙▿˙∩&nbsp;&nbsp;&nbsp;&nbsp;
+(・∀・)&nbsp;&nbsp;&nbsp;&nbsp;
+（＾_＾）&nbsp;&nbsp;&nbsp;&nbsp;
+˙ ͜ʟ˙&nbsp;&nbsp;&nbsp;&nbsp;<br>
+⁙ὸ‿ό⁙&nbsp;&nbsp;&nbsp;&nbsp;
+</h3>
+<h2 id="emojis-h2" >Sad</h2>
+<h3 style="margin-top: 100px;color: #323455;">
+ਉ_ਉ&nbsp;&nbsp;&nbsp;&nbsp;
+⊙︿⊙&nbsp;&nbsp;&nbsp;&nbsp;
+ಠ⌣ಠ&nbsp;&nbsp;&nbsp;&nbsp;
+╥﹏╥&nbsp;&nbsp;&nbsp;&nbsp;
+ōۃō&nbsp;&nbsp;&nbsp;&nbsp;
+ಥ_ಥ&nbsp;&nbsp;&nbsp;&nbsp;
+●︿●&nbsp;&nbsp;&nbsp;&nbsp;
+⊛ठ̯⊛&nbsp;&nbsp;&nbsp;&nbsp;
+ಠ╭╮ಠ&nbsp;&nbsp;&nbsp;&nbsp;
+(╭╮)&nbsp;&nbsp;&nbsp;&nbsp;
+(ㄒoㄒ)&nbsp;&nbsp;&nbsp;&nbsp;
+(Ｔ▽Ｔ)&nbsp;&nbsp;&nbsp;&nbsp;
+(︶︹︺)&nbsp;&nbsp;&nbsp;&nbsp;
+（ｉДｉ）&nbsp;&nbsp;&nbsp;&nbsp;
+（；へ：）&nbsp;&nbsp;&nbsp;&nbsp;
+(╥_╥)&nbsp;&nbsp;&nbsp;&nbsp;
+(T⌓T)&nbsp;&nbsp;&nbsp;&nbsp;
+（´＿｀）&nbsp;&nbsp;&nbsp;&nbsp;
+(T＿T)&nbsp;&nbsp;&nbsp;&nbsp;
+(;﹏;)&nbsp;&nbsp;&nbsp;&nbsp;
+(ToT)&nbsp;&nbsp;&nbsp;&nbsp;
+(∩︵∩)&nbsp;&nbsp;&nbsp;&nbsp;
+(┳◇┳)&nbsp;&nbsp;&nbsp;&nbsp;
+（；_・）&nbsp;&nbsp;&nbsp;&nbsp;
+(T_T)&nbsp;&nbsp;&nbsp;&nbsp;
+(ಥ﹏ಥ)&nbsp;&nbsp;&nbsp;&nbsp;
+(个_个)&nbsp;&nbsp;&nbsp;&nbsp;
+(⋟﹏⋞)&nbsp;&nbsp;&nbsp;&nbsp;
+(ノ﹏ヽ)&nbsp;&nbsp;&nbsp;&nbsp;
+(┳Д┳)&nbsp;&nbsp;&nbsp;&nbsp;
+༶ඬ༝ඬ༶&nbsp;&nbsp;&nbsp;&nbsp;
+(‘A`)&nbsp;&nbsp;&nbsp;&nbsp;
+（πーπ）&nbsp;&nbsp;&nbsp;&nbsp;
+(╯︵╰,)&nbsp;&nbsp;&nbsp;&nbsp;
+(◕︿◕✿)&nbsp;&nbsp;&nbsp;&nbsp;
+(つ﹏<。)&nbsp;&nbsp;&nbsp;&nbsp;
+Σ(ＴωＴ)&nbsp;&nbsp;&nbsp;&nbsp;
+（ ＴДＴ）&nbsp;&nbsp;&nbsp;&nbsp;
+( ≧Д≦)&nbsp;&nbsp;&nbsp;&nbsp;
+( .. )&nbsp;&nbsp;&nbsp;&nbsp;
+(Θ︹Θ)ს&nbsp;&nbsp;&nbsp;&nbsp;
+(⊙︿⊙✿)&nbsp;&nbsp;&nbsp;&nbsp;
+(ρﾟ∩ﾟ)&nbsp;&nbsp;&nbsp;&nbsp;
+【T__T】&nbsp;&nbsp;&nbsp;&nbsp;
+( p_q)&nbsp;&nbsp;&nbsp;&nbsp;
+(◞‸◟；)&nbsp;&nbsp;&nbsp;&nbsp;
+(⌣_⌣”)&nbsp;&nbsp;&nbsp;&nbsp;
+(´Д｀。)&nbsp;&nbsp;&nbsp;&nbsp;
+(′︿‵｡)&nbsp;&nbsp;&nbsp;&nbsp;
+(-_-｡)&nbsp;&nbsp;&nbsp;&nbsp;
+</h3>
+<h2 id="emojis-h2" >Shy</h2>
+<h3 style="margin-top: 100px;color: #323455;">
+^^ゞ&nbsp;&nbsp;&nbsp;&nbsp;
+(〃▽〃)&nbsp;&nbsp;&nbsp;&nbsp;
+(ノ▽〃)&nbsp;&nbsp;&nbsp;&nbsp;
+（/｡＼)&nbsp;&nbsp;&nbsp;&nbsp;
+(/ω＼)&nbsp;&nbsp;&nbsp;&nbsp;
+▓⚗_⚗▓&nbsp;&nbsp;&nbsp;&nbsp;
+(Ŏ艸Ŏ)&nbsp;&nbsp;&nbsp;&nbsp;
+(^^;)&nbsp;&nbsp;&nbsp;&nbsp;
+(〃∇〃)&nbsp;&nbsp;&nbsp;&nbsp;
+(〃ー〃)&nbsp;&nbsp;&nbsp;&nbsp;
+(〃ω〃)&nbsp;&nbsp;&nbsp;&nbsp;
+(〃艸〃)&nbsp;&nbsp;&nbsp;&nbsp;
+(╯_╰)&nbsp;&nbsp;&nbsp;&nbsp;
+(╯ಊ╰)&nbsp;&nbsp;&nbsp;&nbsp;
+(´つヮ⊂)&nbsp;&nbsp;&nbsp;&nbsp;
+(♡´艸`)&nbsp;&nbsp;&nbsp;&nbsp;
+(／▽￣)／&nbsp;&nbsp;&nbsp;&nbsp;
+(／≧ω＼)&nbsp;&nbsp;&nbsp;&nbsp;
+ʕ*ﾉᴥﾉʔ&nbsp;&nbsp;&nbsp;&nbsp;
+(/へ＼*)&nbsp;&nbsp;&nbsp;&nbsp;
+(*ﾉ▽ﾉ)&nbsp;&nbsp;&nbsp;&nbsp;
+(*ﾉωﾉ)&nbsp;&nbsp;&nbsp;&nbsp;
+(*ﾉдﾉ)&nbsp;&nbsp;&nbsp;&nbsp;
+(´～｀ヾ)&nbsp;&nbsp;&nbsp;&nbsp;
+(ﾉ∇≦*)&nbsp;&nbsp;&nbsp;&nbsp;
+(‘-’*)&nbsp;&nbsp;&nbsp;&nbsp;
+(^◇^；)&nbsp;&nbsp;&nbsp;&nbsp;
+|▽//)ゝ&nbsp;&nbsp;&nbsp;&nbsp;
+(〃´∀｀)&nbsp;&nbsp;&nbsp;&nbsp;
+ꈍ .̮ ꈍ&nbsp;&nbsp;&nbsp;&nbsp;
+(〃∀〃)ゞ&nbsp;&nbsp;&nbsp;&nbsp;
+( 〃．．)&nbsp;&nbsp;&nbsp;&nbsp;
+(｡･･｡)&nbsp;&nbsp;&nbsp;&nbsp;
+|´∀｀●)&nbsp;&nbsp;&nbsp;&nbsp;
+6(“ー )&nbsp;&nbsp;&nbsp;&nbsp;
+(〃ﾉωﾉ)&nbsp;&nbsp;&nbsp;&nbsp;
+（；^ω^）&nbsp;&nbsp;&nbsp;&nbsp;
+(∩∀｀*)&nbsp;&nbsp;&nbsp;&nbsp;
+(⊙﹏⊙✿)&nbsp;&nbsp;&nbsp;&nbsp;
+(⌒_⌒;)&nbsp;&nbsp;&nbsp;&nbsp;
+(⌒・⌒)ゞ&nbsp;&nbsp;&nbsp;&nbsp;
+(*^^*)&nbsp;&nbsp;&nbsp;&nbsp;
+(*￣∀￣)&nbsp;&nbsp;&nbsp;&nbsp;
+(ノv`*)&nbsp;&nbsp;&nbsp;&nbsp;
+(ノ∀￣〃)&nbsp;&nbsp;&nbsp;&nbsp;
+(ﾉ∀＼*)&nbsp;&nbsp;&nbsp;&nbsp;
+(´ω｀*)&nbsp;&nbsp;&nbsp;&nbsp;
+(*ﾟ∀ﾟ*)&nbsp;&nbsp;&nbsp;&nbsp;
+(p〃д〃q)&nbsp;&nbsp;&nbsp;&nbsp;
+(〃ﾟдﾟ〃)&nbsp;&nbsp;&nbsp;&nbsp;
+</h3>
+<h2 id="emojis-h2" >Animals</h2>
+<h3 style="margin-top: 100px;color: #323455;">
+ﾐ・e&nbsp;&nbsp;&nbsp;&nbsp;
+ﾐﾟ ∋&nbsp;&nbsp;&nbsp;&nbsp;
+U・ω・U&nbsp;&nbsp;&nbsp;&nbsp;
+Ｕ×Å×Ｕ&nbsp;&nbsp;&nbsp;&nbsp;
+(・´｀Ｕ&nbsp;&nbsp;&nbsp;&nbsp;
+U＞ω＜）&nbsp;&nbsp;&nbsp;&nbsp;
+U・♀・U&nbsp;&nbsp;&nbsp;&nbsp;
+U^ｪ^U&nbsp;&nbsp;&nbsp;&nbsp;
+U￣ｰ￣U&nbsp;&nbsp;&nbsp;&nbsp;
+C・u・つ&nbsp;&nbsp;&nbsp;&nbsp;
+Uゝｪ・｀U&nbsp;&nbsp;&nbsp;&nbsp;
+ﾍU・x・U&nbsp;&nbsp;&nbsp;&nbsp;
+|ｴ)･)⊃&nbsp;&nbsp;&nbsp;&nbsp;
+…ξノ¨&nbsp;&nbsp;&nbsp;&nbsp;
+U/ｪ･､U&nbsp;&nbsp;&nbsp;&nbsp;
+ﾍU^ｪ^U&nbsp;&nbsp;&nbsp;&nbsp;
+(／(ｴ)＼)&nbsp;&nbsp;&nbsp;&nbsp;
+U-ｪ-;Uゞ&nbsp;&nbsp;&nbsp;&nbsp;
+(o?o)ﾉ?&nbsp;&nbsp;&nbsp;&nbsp;
+(´;ェ;`)&nbsp;&nbsp;&nbsp;&nbsp;
+(´pゝω･)&nbsp;&nbsp;&nbsp;&nbsp;
+(￣（∞）￣)&nbsp;&nbsp;&nbsp;&nbsp;
+U･(ｴ)･U&nbsp;&nbsp;&nbsp;&nbsp;
+Uo･∇･oU&nbsp;&nbsp;&nbsp;&nbsp;
+Uo-ｪ-oU&nbsp;&nbsp;&nbsp;&nbsp;
+(；ﾟ(ｴ)ﾟ)&nbsp;&nbsp;&nbsp;&nbsp;
+(Θ(ｴ)Θ*)&nbsp;&nbsp;&nbsp;&nbsp;
+@(/ｪ･o)@&nbsp;&nbsp;&nbsp;&nbsp;
+( =①ω①=)&nbsp;&nbsp;&nbsp;&nbsp;
+((≡￣♀￣≡))&nbsp;&nbsp;&nbsp;&nbsp;
+( ´(00)`)&nbsp;&nbsp;&nbsp;&nbsp;
+(´+(ｴ)+`)&nbsp;&nbsp;&nbsp;&nbsp;
+(^･o･^)ﾉ”&nbsp;&nbsp;&nbsp;&nbsp;
+@(;･ｪ･)@/&nbsp;&nbsp;&nbsp;&nbsp;
+(^･o･^)ﾉ\&nbsp;&nbsp;&nbsp;&nbsp;
+(Ｕ?????)ノ&nbsp;&nbsp;&nbsp;&nbsp;
+(´??ω??｀)&nbsp;&nbsp;&nbsp;&nbsp;
+o(^・x・^)w&nbsp;&nbsp;&nbsp;&nbsp;
+(*´(00)`)&nbsp;&nbsp;&nbsp;&nbsp;
+((≡ﾟ♀ﾟ≡))&nbsp;&nbsp;&nbsp;&nbsp;
+(･∀)人(ｪ･｡U&nbsp;&nbsp;&nbsp;&nbsp;
+m(-（●●）-)m&nbsp;&nbsp;&nbsp;&nbsp;
+(*'(OO)’*)&nbsp;&nbsp;&nbsp;&nbsp;
+(。-(ェ)-。 )&nbsp;&nbsp;&nbsp;&nbsp;
+(´･(00)･｀)&nbsp;&nbsp;&nbsp;&nbsp;
+(#＞（●●）＜#)&nbsp;&nbsp;&nbsp;&nbsp;
+((ﾐﾟρﾟ ﾐ))&nbsp;&nbsp;&nbsp;&nbsp;
+~□Pヘ(^‥^=)~&nbsp;&nbsp;&nbsp;&nbsp;
+(T（●●）T)/~~~&nbsp;&nbsp;&nbsp;&nbsp;<br>
+~□Pヘ(^･ω･^=)~&nbsp;&nbsp;&nbsp;&nbsp;
+</h3>
 
+<h2 id="emojis-h2" style="font-size:64px;">More coming soon</h2>
+</center>
+</div>
   </body>
 </html>
