--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   				<a href="#language">Language</a>
   				<a href="#words">Most common Japanese words</a>
   				<a href="#emojis">Emojis</a>
-                      <a href="https://github.com/Petkovix/Japanese-Thread">Fork me</a>
+          <a href="https://github.com/pepefrog/Japanese-Thread">Fork me</a>
   			</ul>
   		</div>
   		<center>
@@ -60,8 +60,8 @@
   						<a href="#grammar">2c. Grammar</a>
   						<a href="#lnp">2d. Listening & Production</a>
   						<a href="#practice">3. Practice</a>
-                                 <a href="#lr">4. Learning Resources</a>
-                                <a href="#tools">5. Tools</a>
+              <a href="#lr">4. Learning Resources</a>
+              <a href="#tools">5. Tools</a>
   					</ul>
   				</center>
   				<div id="kana">
@@ -680,5 +680,6 @@ m(-（●●）-)m&nbsp;&nbsp;&nbsp;&nbsp;
 <h2 id="emojis-h2" style="font-size:64px;">More coming soon</h2>
 </center>
 </div>
-  </body>
+<div id=""></div>
+</body>
 </html>
